--- a/templates/buoy.html
+++ b/templates/buoy.html
@@ -13,6 +13,9 @@
             <div class="col-lg-12">
                 <img class="img-responsive" src='data:image/png;base64,{{.DirectionalSpectraPlot}}'>
             </div>
+            <div class="col-lg-12">
+                <img class="img-responsive" src='data:image/png;base64,{{.SpectraDistributionPlot}}'>
+            </div>
         </div>
     </div>
 </div>
