--- a/templates/buoy.html
+++ b/templates/buoy.html
@@ -11,9 +11,13 @@
     <div class="row spectra-row">
         <div class="container">
             <div class="col-lg-12">
+                <div>
+                    <h2>Wave Summary</h2>
+                    <h4></h4>
+                    <h2>Components</h2>
+                    <h4></h4>
+                </div>
                 <img class="img-responsive" src='data:image/png;base64,{{.DirectionalSpectraPlot}}'>
-            </div>
-            <div class="col-lg-12">
                 <img class="img-responsive" src='data:image/png;base64,{{.SpectraDistributionPlot}}'>
             </div>
         </div>
