--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -4,7 +4,13 @@
     <div class="row">
         <div class="col-lg-12 header-row">
             <div class="container">
-                <h2>Coming Soon</h2>
+                <h2>API Documentation</h2>
+                <p>This is a completely free API for fetching the latest NDBC buoy information in a more convenent way than using the NOAA reporting. There is no log in required for the time being, but that <b>is subject to change without notice</b>. Please do not abuse this service.</p>
+
+                <h3>Methods</h3>
+
+                <!-- TODO: Document the methods -->
+                <p>Documentation coming soon</p>
             </div>
         </div>
     </div>
