--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,13 @@
 {{ define "content" }}
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXwK_jBmr13EIhVRCm7YTmRKNvMnwQzTM&callback=initBuoyMap"async defer></script>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12 header-row">
             <div class="container">
-                <h2>Coming Soon</h2>
+                <div id="map" class="buoy-map">
+                </div>
             </div>
         </div>
     </div>
