--- a/templates/base.html
+++ b/templates/base.html
@@ -43,15 +43,15 @@
         <!-- Ends Main Content Layout -->
         
         <!-- Begin the Footer Layout -->
-<!--         <div class="container">
+        <div class="container">
             <div id="footerRow" class="row">
                 <div class="col-lg-12 text-center">
                     <ul class="list-inline">
-                        <li>Copyright 2015, Matthew Iannucci</li>
+                        <li>Copyright 2016, Matthew Iannucci</li>
                     </ul>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
 </body>
 
