--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,9 @@
     <div id="contentContainer">
             <!-- Create the Main Content layout.-->
         <!-- Get the Main Content from the server -->
+        <div class="container">
         {{ template "content" .}}
+        </div>
         <!-- Ends Main Content Layout -->
         
         <!-- Begin the Footer Layout -->
