--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,9 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXwK_jBmr13EIhVRCm7YTmRKNvMnwQzTM&callback=initBuoyMap"async defer></script>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12 header-row">
-            <div class="container">
-                <div id="map" class="buoy-map">
-                </div>
-            </div>
-        </div>
+<div class="row">
+    <div class="col-lg-12 header-row">
+        <div id="map" class="buoy-map"></div>
     </div>
 </div>
 
