Add location info to buoy page

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     <div id="contentContainer">
             <!-- Create the Main Content layout.-->
         <!-- Get the Main Content from the server -->
-        <div class="container">
+        <div class="container-fluid">
         {{ template "content" .}}
         </div>
         <!-- Ends Main Content Layout -->
