--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 
 <div class="row">
     <div class="col-lg-12 header-row">
-        <div id="map" class="buoy-map"></div>
+        <div class="container">
+            <div id="map" class="buoy-map"></div>
+        </div>
     </div>
 </div>
 
